--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.amap.api:location:4.8.0'
     //搜索功能
     implementation 'com.amap.api:search:7.1.0'
+
+    implementation 'com.contrarywind:Android-PickerView:4.1.9'
 }
