--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,13 @@ dependencies {
     implementation 'com.amap.api:search:7.1.0'
 
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
+
+    //MD设计相关
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.github.clans:fab:1.6.4'
 }
